--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@celo/contractkit": "^3.1.0",
     "@celo/rainbowkit-celo": "^0.8.1",
     "@celo/react-celo": "^4.3.0",
+    "@dicebear/collection": "^6.0.2",
+    "@dicebear/core": "^6.0.2",
     "@headlessui/react": "^1.7.8",
     "@heroicons/react": "^2.0.14",
     "@mapbox/rehype-prism": "^0.8.0",
@@ -24,6 +26,7 @@
     "gray-matter": "^4.0.3",
     "next": "13.1.6",
     "next-mdx-remote": "^4.3.0",
+    "nextjs-progressbar": "^0.0.16",
     "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-customizable-progressbar": "^1.2.0",
