--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@dicebear/collection": "^6.0.2",
     "@dicebear/core": "^6.0.2",
     "@headlessui/react": "^1.7.8",
-    "@heroicons/react": "^2.0.14",
+    "@heroicons/react": "^2.0.17",
     "@mapbox/rehype-prism": "^0.8.0",
     "@rainbow-me/rainbowkit": "^0.8.1",
     "@types/mapbox__rehype-prism": "^0.8.0",
@@ -29,8 +29,10 @@
     "nextjs-progressbar": "^0.0.16",
     "prismjs": "^1.29.0",
     "react": "18.2.0",
+    "react-container-dimensions": "^1.4.1",
     "react-customizable-progressbar": "^1.2.0",
     "react-dom": "18.2.0",
+    "react-shimmer": "^3.2.0",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-code-titles": "^1.1.0",
