Feat: Firebase dependency removed for local development

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# If ENV is set to local, the app will not use Firebase
+# Firebase if only needed when ENV = production or staging
+# local, staging, production
+ENV="local"
 FIREBASE_API_KEY=""
 FIREBASE_AUTH_DOMAIN=""
 FIREBASE_PROJECT_ID=""
